--- a/web/front/inc/js/api/package.json
+++ b/web/front/inc/js/api/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "front",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Requests.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
