--- a/web/back/public/.htaccess
+++ b/web/back/public/.htaccess
@@ -1,4 +1,6 @@
+# Redirect to front controller
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ app.php [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^ index.php [QSA,L] 
